k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nova-chatbot-svc
  labels:
    app: nova-chatbot
spec:
  type:     ClusterIP
  selector:
    app: nova-chatbot
  ports:
    - name:       http
      port:       80
      targetPort: 8000
      protocol:   TCP
